@@ -1,6 +1,7 @@
 Changes between 2.2 and 2.3:
 ----------------------------
   * Fix potential segfault in aggregartp
+  * Do not do retx in reordertp with multicast inputs
 
 Changes between 2.1 and 2.2:
 ----------------------------
